Implement multy-tenancy based on group hierarchy